[gd_scene load_steps=2 format=3 uid="uid://cp7nsg06r10du"]

[ext_resource type="Script" path="res://debug_info.gd" id="1_qfqmd"]

[node name="Debug" type="VBoxContainer"]
anchors_preset = -1
anchor_top = 1.0
anchor_bottom = 1.0
grow_vertical = 0
theme_override_constants/separation = 0

[node name="Show_Hide" type="Button" parent="."]
custom_minimum_size = Vector2(96, 0)
layout_mode = 2
size_flags_horizontal = 0
text = "^"

[node name="DebugInfo" type="Panel" parent="."]
clip_contents = true
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
script = ExtResource("1_qfqmd")

[node name="VBoxContainer" type="VBoxContainer" parent="DebugInfo"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 2

[node name="ScrollContainer" type="ScrollContainer" parent="DebugInfo/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="RichTextLabel" type="RichTextLabel" parent="DebugInfo/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Command" type="LineEdit" parent="DebugInfo/VBoxContainer"]
layout_mode = 2
placeholder_text = "Debug command..."

[connection signal="pressed" from="Show_Hide" to="DebugInfo" method="_on_show_hide_pressed"]
[connection signal="text_submitted" from="DebugInfo/VBoxContainer/Command" to="DebugInfo" method="_on_command_text_submitted"]
